--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="./apply.html" class="nav-link"><i></i> Join Us</a>
-                    </li>
+                    </li>              
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom"
                             href="https://facebook.com/MACRoboMaster" target="_blank">
@@ -209,8 +209,7 @@
                                 many technology enthusiasts and the public.
                             </h5>
                             <br>
-                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
-                        </div>
+                            <a href="https://www.robomaster.com/en-US" class="btn btn-danger btn-round">See Details</a>
                     </div>
                 </div>
             </div>
