--- a/apply.html
+++ b/apply.html
@@ -173,15 +173,15 @@
                                 If you are interested in this amazing oppotunity, feel free to come!
                             </h4>
                             <br>
-                            <a href="#paper-kit" class="btn btn-danger btn-round">Application Not Open Yet</a>
+                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">Application Not Open Yet</a> -->
                         </div>
 
-                            <!-- <div class="col-md-12 ml-auto mr-auto">
-                                <button class="btn btn-danger btn-lg btn-fill"
-                                    onclick="location.href='https://forms.gle/HdPv6DDJkJrqWrDy6'" type="button">Apply
+							<div class="col-md-12 ml-auto mr-auto">
+                             <button class="btn btn-danger btn-lg btn-fill"
+                                    onclick="location.href='https://forms.gle/dzdeFcbnMY1uKipy6'" type="button">Apply
                                     Now</button>
                             </div> 
-                        </div> -->
+                        </div>
 
                         <!-- <div class="row">
                         <div class="embed-responsive embed-responsive-10by19">
