--- a/Team.html
+++ b/Team.html
@@ -276,7 +276,8 @@
                                     <a href="#paper-kit">
                                         <div class="author">
                                             <h4 class="card-title">Felix Zhang</h4>
-                                            <h6 class="card-category">Mechanical Lead</h6>
+                                            <h6 class="card-category">Mechanical Lead </h6>
+                                            <h6 class="card-category">Business Lead</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -346,6 +347,27 @@
                                     </a>
                                     <p class="card-description text-center">
                                         Department of Materials Science and Engineering
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Dr. Stephen Kelly -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a><img src="./assets/img/faces/skelly.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Dr. Stephen Kelly</h4>
+                                            <h6 class="card-category">Assistant Professor</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                        Department of Computing and Software
 
                                     </p>
                                 </div>
