--- a/Team.html
+++ b/Team.html
@@ -206,6 +206,26 @@
                                 </div>
                             </div>
                         </div>
+						<!-- zhenghang li -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="" target="_blank"><img
+                                            src="./assets/img/faces/zhenghang.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Zhenghan Li</h4>
+                                            <h6 class="card-category">Mechanical Lead</h6>
+											<h6 class="card-category">Co-Founder</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Tim -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -285,18 +305,18 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Kino Song -->
+                        <!-- Jade Yu -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/gengyusong/" target="_blank">
-                                        <img src="./assets/img/faces/kino.jpg" alt="..."></a>
+                                        <img src="./assets/img/faces/Jade.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Kino Song</h4>
-                                            <h6 class="card-category">Promotion Lead</h6>
+                                            <h4 class="card-title">Jade</h4>
+                                            <h6 class="card-category">General Manager</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -304,6 +324,7 @@
                                 </div>
                             </div>
                         </div>
+      
 
 
 
@@ -815,6 +836,25 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Kino Song -->
+                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="card card-profile card-plain">
+                            <div class="card-avatar">
+                                <a href="https://www.linkedin.com/in/gengyusong/" target="_blank">
+                                    <img src="./assets/img/faces/kino.jpg" alt="..."></a>
+                            </div>
+                            <div class="card-body">
+                                <a>
+                                    <div class="author">
+                                        <h4 class="card-title">Kino Song</h4>
+                                        <h6 class="card-category">Ex Promotion Lead</h6>
+                                    </div>
+                                </a>
+                                <p class="card-description text-center">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 
                         <!-- Jianzhao Wang -->
                         <div class="col-md-4 animatable fadeInUp">
