fix Zhenghan title

--- a/Team.html
+++ b/Team.html
@@ -218,6 +218,7 @@
                                         <div class="author">
                                             <h4 class="card-title">Zhenghan Li</h4>
                                             <h6 class="card-category">Mechanical Lead</h6>
+                                            <h6 class="card-category">Electrical Lead</h6>
 											<h6 class="card-category">Co-Founder</h6>
                                         </div>
                                     </a>
