--- a/Team.html
+++ b/Team.html
@@ -310,7 +310,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/gengyusong/" target="_blank">
+                                    <a href="" target="_blank">
                                         <img src="./assets/img/faces/Jade.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
