--- a/Team.html
+++ b/Team.html
@@ -247,6 +247,25 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Congling Tang -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/conglingtang/" target="_blank">
+                                        <img src="./assets/img/faces/Congling.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a>
+                                        <div class="author">
+                                            <h4 class="card-title">Congling Tang</h4>
+                                            <h6 class="card-category">Computer Vision Co-Lead </h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Bill Lin -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -258,7 +277,7 @@
                                     <a>
                                         <div class="author">
                                             <h4 class="card-title">Haoyu Lin</h4>
-                                            <h6 class="card-category">Computer Vision Lead </h6>
+                                            <h6 class="card-category">Computer Vision Co-Lead </h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -316,8 +335,27 @@
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Jade</h4>
+                                            <h4 class="card-title">Jade Yu</h4>
                                             <h6 class="card-category">General Manager</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Amy Sun -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/xiting-sun-b44a52221/ " target="_blank">
+                                        <img src="./assets/img/faces/Amy.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a>
+                                        <div class="author">
+                                            <h4 class="card-title">Amy Sun</h4>
+                                            <h6 class="card-category">Promotion Lead</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
