update sponsor page

--- a/Sponsor.html
+++ b/Sponsor.html
@@ -182,43 +182,80 @@
         <div class="main">
             <!-- Sponsors -->
             <div id="sponsors" class="section text-center container-fluid">
-                <div class="container">
+                <div class="container" >
                     <h1 class="title animatable fadeInUp">Sponsors & Partners</h1>
                     <br />
                     <br />
                     <br />
 
-
-                    <div class="row">
-                        <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/maceng.png" style="height: 100px">
-                        </div>
-                        <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/dji.jpg" style="height: 120px">
-                        </div>
-                        <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
-                        </div>
-                        <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/nvidia.png" style="height: 120px">
-                        </div>
-                        <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/solidworks-vector-logo.svg" style="height: 180px">
-                        </div>
-						<div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/Altium_Logo_BLK.svg" style="height: 170px">
-                        </div>
-                    </div>
-
                     <div class="col-md-12 ml-auto mr-auto animatable fadeInUp">
-                        <br />
-                        <br />
-                        <br />
-                        <br />
                         <a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
                             <input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
                         </a>
+                        <br />
+                        <br />
                     </div>
+
+                    <div class="row 2" >
+                        <h2 class="title animatable fadeInUp col-md-12">Platium Sponsors</h2>
+                        <br />
+                        <br />
+                    </div>
+                    <div class="row" >
+                        <div class="col-sm-4 offset-sm-2 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/solidworks-vector-logo.svg" style="height: 300px; padding: 30px">
+                        </div>
+                        <div class="col-sm-4 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/Altium_Logo_BLK.svg" style="height: 300px; padding: 30px">
+                        </div>
+                        <div class="col-sm-4 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/mcmaster.png" style="height: 210px ; padding: 30px ">
+                        </div>
+                    </div>
+
+                    <div class="row" >
+                        <h2 class="title animatable fadeInUp col-md-12">Gold Sponsors</h2>
+                        <br />
+                        <br />
+                    </div>
+                    <div class="row" >
+                        <div class="col-sm-4 col-md-7 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/dji.jpg" style="height: 250px; padding: 30px">
+                        </div>
+                        <div class="col-md-1 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/nvidia.png" style=" height: 230px; padding: 30px" >
+                        </div>
+                    </div>
+
+                    <div class="row" >
+                        <h2 class="title animatable fadeInUp col-md-12">Silver Sponsors</h2>
+                        <br />
+                        <br />
+                    </div>
+                    <div class="row" >
+                        <div class="col-md-12 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/maceng.png" style=" height: 180px; padding: 30px">
+                        </div>
+                    </div>
+
+
+                    <div class="row" >
+                        <h2 class="title animatable fadeInUp col-md-12">Bronze Sponsors</h2>
+                        <br />
+                        <br />
+                    </div>
+
+                    <div class="row" >
+                        <div class="col-md-12 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/ideal_edu.jpg" style="height: 180px; padding: 30px">
+                        </div>
+                    </div>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+
+                    
                 </div>
             </div>
 
