--- a/Sponsor.html
+++ b/Sponsor.html
@@ -219,7 +219,7 @@
                         <br />
                     </div>
                     <div class="row" >
-                        <div class="col-sm-4 col-md-7 offset-md-5 animatable fadeInUp">
+                        <div class="col-md-7 offset-md-5 animatable fadeInUp">
                             <img src="./assets/img/sponsors/dji.jpg" style="height: 250px; padding: 30px">
                         </div>
                         <div class="col-md-1 offset-md-5 animatable fadeInUp">
@@ -233,7 +233,10 @@
                         <br />
                     </div>
                     <div class="row" >
-                        <div class="col-md-12 offset-md-5 animatable fadeInUp">
+                        <div class="col-md-7 offset-md-5 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/bambu_lab.png" style=" height: 210px; padding: 30px">
+                        </div>
+                        <div class="col-md-1 offset-md-5 animatable fadeInUp">
                             <img src="./assets/img/sponsors/maceng.png" style=" height: 180px; padding: 30px">
                         </div>
                     </div>
