--- a/Sponsor.html
+++ b/Sponsor.html
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="row 2" >
-                        <h2 class="title animatable fadeInUp col-md-12">Platium Sponsors</h2>
+                        <h2 class="title animatable fadeInUp col-md-12">Platinum Sponsors</h2>
                         <br />
                         <br />
                     </div>
