--- a/Contact.html
+++ b/Contact.html
@@ -196,7 +196,7 @@
                             // Initialize and add the map
                             function initMap() {
                                 // The location of Uluru
-                                var uluru = { lat: 43.259121, lng: -79.920842 };
+                                var uluru = { lat: 43.2608059, lng: -79.920407 };
                                 // The map, centered at Uluru
                                 var map = new google.maps.Map(document.getElementById('map-container'), {
                                     zoom: 15,
@@ -305,13 +305,13 @@
                                     </div>
 
                                     <p class="card-description" style="text-align: left">
-                                        Information Technology Building
+                                        John Hodgins Engineering Building B120
                                         <br />
                                         1280 Main St W
                                         <br />
                                         Hamilton, ON
                                         <br />
-                                        L8P 0B8
+                                        L8S 4M6
                                         <br />
                                         <br />
                                         <br />
